[package]
authors = ['Ricardo Rius <ricardo@rius.info>']
edition = '2018'
name = 'srml-did'
version = '1.0.0'

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"rstd/std",
	"support/std",
	"balances/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"serde"
]
no_std = []

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '4.1.1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'