[package]
authors = ['Ricardo Rius <ricardo@rius.info>']
edition = '2018'
name = 'srml-did'
version = '1.0.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"serde"
]
no_std = []

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
features = ['derive']
version = '1.0.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'