[package]
authors = ['Ricardo Rius <ricardo@rius.info>']
edition = '2018'
name = 'srml-did'
version = '1.0.1'

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"serde"
]
no_std = []

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
features = ['derive']
version = '1.0.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'